# anypia-js

./: .gitignore  .travis.yml  LICENSE.md  Tools.ini  generate_buildscripts.sh  installbuild-emscripten-anypiab-mac.sh  installbuild-emscripten-anypiab-windows.bat  installbuild-linux-anypiab.sh  installbuild-mac-anypiab.sh  installbuild-windows.bat  onlybuild-emscripten-anypiab-mac.sh  onlybuild-emscripten-anypiab-windows.bat  onlybuild-linux-anypiab.sh  onlybuild-windows.bat  readme.md  sample20.pia
.github/workflows/: main.yml
anypia32/: Anypia32.cpp  Anypia32.h  Anypia32.rc  AnypiaView.cpp  AnypiaView.h  AssumptionsDialog.cpp  AssumptionsDialog.h  AwbidatIni.cpp  AwbidatIni.h  AwincIni.cpp  AwincIni.h  AwprojDialog.cpp  AwprojDialog.h  AwsetDialog.cpp  AwsetDialog.h  BaseyearDialog.cpp  BaseyearDialog.h  BaseyearIni.cpp  BaseyearIni.h  BiprojDialog.cpp  BiprojDialog.h  BiprojIni.cpp  BiprojIni.h  BisetDialog.cpp  BisetDialog.h  CMakeLists.txt  CachupIni.cpp  CachupIni.h  ConfigDialog.cpp  ConfigDialog.h  ConfigIni.cpp  ConfigIni.h  CuprojDialog.cpp  CuprojDialog.h  CusetDialog.cpp  CusetDialog.h  DeathDialog.cpp  DeathDialog.h  DisabDialog.cpp  DisabDialog.h  (+44 more)
anypia32/res/: Anypia32.rc2
anypiab/: CMakeLists.txt  PIA.H  anypiab.cpp  anypiab.sln  anypiab.vcxproj  anypiabdoc.cpp  anypiabdoc.h  anypiatestdoc.cpp  anypiatestdoc.h
anypiajs/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp  PiaCalOutput.cpp  PiaCalOutput.h  ProjectConfigs.in  anypiabdoc.cpp  anypiabdoc.h  anypiajs.sln  anypiajs.vcxproj  anypiajsConfig.h.in  anypiatestdoc.cpp  anypiatestdoc.h
anypiajs/js-interface/: app.js  interface.js  test.html
buildemmisc/: test.html  test.js  test.wasm
oactobjs32/include/: BitAnnual.h  LawChange.h  Path.h  Sex.h  WorkerDataGeneral.h  age.h  avgwg.h  datemodyyr.h  datemoyr.h  dbleann.h  pathname.h  ssn.h
oactobjs32/linux/: BitAnnual.cpp  BitAnnualBase.h  BitAnnualInlines.h  BitPacked.cpp  BitPacked.h  CommaBase.h  Floor.h  PathnameSeparator.h  PragmaWarningDisable4786.h  chdir.h  gnumath.h  isspace.h  strcasecmp.h
oactobjs32/misc/: CMakeLists.txt  DateFormatter.cpp  OutfileHTML.cpp  age.cpp  datemoyr.cpp  misc.sln  misc.vcxproj  outfile.cpp
oactobjs32/piadata/: CMakeLists.txt  DebugCase.cpp  DisInsCodeArray.cpp  InsCodeArray.cpp  LawChangeDECLINEPERC.cpp  avgwg.cpp  awincfl.cpp  piadata.sln  piadata.vcxproj  qc.cpp  qcamt.cpp
oactobjs32/piaout/: CMakeLists.txt  ChildCareCalc2Page.h  DibGuarPage.h  FamilyPage.cpp  FamilyPage.h  OldStart2Page.cpp  OldStart2Page.h  PebsCreditInfo.h  PebsEarnings.h  PebsEarningsInfo.h  PebsLetter.cpp  PebsOasdiEst.h  PebsOut.h  PebsWorkerEarnings.h  PebsWorkerInfo.h  PiaTable1Page.h  PiaTable2Page.h  ReindWid1Page.h  ReindWid2Page.h  SpecMin1Page.h  Summary2Page.h  SummaryPage.cpp  TransGuar1Page.h  TransGuar2Page.h  WageInd1Page.h  piaout.sln  piaout.vcxproj
oactobjs32/windows/: BitAnnualBase.cpp  BitAnnualBase.h  BitAnnualInlines.h  CMakeLists.txt  CommaBase.h  Floor.h  OutDC.cpp  OutDC.h  OutFile132.cpp  OutFile132.h  OutFile80.cpp  OutFile80.h  PathnameSeparator.h  PragmaWarningDisable4786.h  chdir.h  erf.c  getopt.c  getopt.h  getopt_long.c  gnumath.h  isspace.h  libyywrap.c  math_private.h  rint.c  strcasecmp.c  strcasecmp.h  windows.sln  windows.vcxproj
