cmake_minimum_required(VERSION 3.10)

project(piadata)

set(SOURCES
    "Assumptions.cpp"
    "AssumptionsFile.cpp"
    "AssumptionsNonFile.cpp"
    "AssumptionType.cpp"
    "avgwg.cpp"
    "awbidat.cpp"
    "awbidtfl.cpp"
    "awbidtnf.cpp"
    "awinc.cpp"
    "AwincDoc.cpp"
    "awincfl.cpp"
    "awincnf.cpp"
    "BaseChangeType.cpp"
    "baseyear.cpp"
    "baseyrfl.cpp"
    "baseyrnf.cpp"
    "bendmfb.cpp"
    "bendpia.cpp"
    "BendPoints.cpp"
    "BenefitAmount.cpp"
    "BenefitAmountArray.cpp"
    "Bic.cpp"
    "biproj.cpp"
    "biprojfl.cpp"
    "biprojnf.cpp"
    "bpmfbout.cpp"
    "bppiaout.cpp"
    "cachpdoc.cpp"
    "cachup.cpp"
    "cachupfl.cpp"
    "cachupnf.cpp"
    "ChildCareCalc.cpp"
    "ChildCareCalcLC.cpp"
    "CompPeriod.cpp"
    "config.cpp"
    "configFile.cpp"
    "configNonFile.cpp"
    "DebugCase.cpp"
    "DibGuar.cpp"
    "DibGuarLC.cpp"
    "dinscode.cpp"
    "DisabPeriod.cpp"
    "DisInsCodeArray.cpp"
    "EarnProject.cpp"
    "foinfo.cpp"
    "foinfofl.cpp"
    "foinfonf.cpp"
    "FrozMin.cpp"
    "frzyrs.cpp"
    "inscode.cpp"
    "InsCodeArray.cpp"
    "LawChange.cpp"
    "LawChangeAGE65COMP.cpp"
    "LawChangeALLEARN.cpp"
    "LawChangeArray.cpp"
    "LawChangeBPFRACWAGE.cpp"
    "LawChangeBPMINCONST.cpp"
    "LawChangeBPSPECRATE.cpp"
    "LawChangeCHILDCARECREDIT.cpp"
    "LawChangeCHILDCAREDROPOUT.cpp"
    "LawChangeCOLACHANGE.cpp"
    "LawChangeDECLINEPERC.cpp"
    "LawChangeDROPOUTCHG.cpp"
    "LawChangeMARRLENGTH.cpp"
    "LawChangeNEWFORMULA.cpp"
    "LawChangeNEWSPECMIN.cpp"
    "LawChangeNRACHANGE.cpp"
    "LawChangeOut.cpp"
    "LawChangePSAACCT.cpp"
    "LawChangeRead.cpp"
    "LawChangeTAXBENCHG.cpp"
    "LawChangeTAXRATECHG.cpp"
    "LawChangeWAGEBASECHG.cpp"
    "LawChangeWIDFACTOR.cpp"
    "LawChangeWIFEFACTOR.cpp"
    "LawChangeWrite.cpp"
    "msdates.cpp"
    "msdatesvec.cpp"
    "oldpia.cpp"
    "oldstart.cpp"
    "OldStartLC.cpp"
    "pebs.cpp"
    "percmfb.cpp"
    "percpia.cpp"
    "PercPiaOut.cpp"
    "piacal.cpp"
    "piacalany.cpp"
    "piacallc.cpp"
    "PiaCalPL.cpp"
    "piadata.cpp"
    "PiadataArray.cpp"
    "PiaMethod.cpp"
    "PiaParamsLCTR.cpp"
    "PiaParamsTR.cpp"
    "piaparms.cpp"
    "piaparmsAny.cpp"
    "piaparmsLC.cpp"
    "piaparmsPL.cpp"
    "piaread.cpp"
    "piareadAny.cpp"
    "PiaTable.cpp"
    "PiaTableLC.cpp"
    "piawrite.cpp"
    "piawriteAny.cpp"
    "pib50mfb.cpp"
    "pib50pib.cpp"
    "pib52ame.cpp"
    "pib52mfb.cpp"
    "pib54ame.cpp"
    "pib54mfb.cpp"
    "pib54pia.cpp"
    "pib58ame.cpp"
    "pib58pib.cpp"
    "Pifc.cpp"
    "PortionAime.cpp"
    "PresValFacs.cpp"
    "Psa.cpp"
    "qc.cpp"
    "qcamt.cpp"
    "QcArray.cpp"
    "QcPacked.cpp"
    "railroad.cpp"
    "ReindWid.cpp"
    "ReindWidLC.cpp"
    "RetireTest.cpp"
    "rtgenrl.cpp"
    "ScaledEarnFactors.cpp"
    "Secondary.cpp"
    "SecondaryArray.cpp"
    "Sga.cpp"
    "SgaDerived.cpp"
    "SgaGeneral.cpp"
    "SpecMin.cpp"
    "SpecMinLC.cpp"
    "TaxBenefits.cpp"
    "TaxBenefitsLC.cpp"
    "TaxData.cpp"
    "TaxRates.cpp"
    "TaxRatesLC.cpp"
    "TaxRatesPL.cpp"
    "TransGuar.cpp"
    "TransGuarLC.cpp"
    "UserAssumptions.cpp"
    "WageBase.cpp"
    "WageInd.cpp"
    "WageIndGeneral.cpp"
    "WageIndLC.cpp"
    "WageIndNonFreeze.cpp"
    "wbgenrl.cpp"
    "wbgenrlLC.cpp"
    "WorkerDataArray.cpp"
    "WorkerDataGeneral.cpp"
    "wrkrdata.cpp"
)

find_package(Boost 1.64.0 REQUIRED COMPONENTS date_time)

add_library(${PROJECT_NAME} STATIC ${SOURCES})

target_include_directories(${PROJECT_NAME} PUBLIC
    "${PROJECT_SOURCE_DIR}/../include"
    "${PROJECT_SOURCE_DIR}/../windows"
    ${Boost_INCLUDE_DIRS}
)
